<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.StartActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/login_acc_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_an_acc_label"
                android:background="@color/accentV3"
                android:textColor="@color/white"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/new_acc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_acc_btn"
                android:textColor="@color/white"
                android:background="@color/accentV4" />
        </TableRow>
    </TableLayout>
</RelativeLayout>